--- a/css/default.css
+++ b/css/default.css
@@ -2,6 +2,8 @@
 
 /* CSS Document */
 /* ---------------------------------기본요소--------------------------------- */
+html, body {width: 100%; height: 100%;}
+
 body,ul,ol,li{margin:0; padding:0; font-family: verdana; font:100%;}
 ul,ol,li{ list-style:none;}
 a{ text-decoration:none; color:#999;}
@@ -18,7 +20,7 @@ button {background: transparent; border: none;}
 
 /* ---------------------------------레이아웃--------------------------------- */
 /* 메인 공통 레이아웃 */
-.wrapper { width:100%; }
+.wrapper { width:100%; height: 100%; background: red;}
 
 /* tinke */
 .logos { position:fixed; width:120px; height:80px; left:50%; margin-left:-60px; z-index:99999999;}
