--- a/css/doryun.css
+++ b/css/doryun.css
@@ -1,19 +1,11 @@
 /* 도륜 */
-/*=====================↓↓ section1 임시=================================*/
-#splash.section {
-	height: 885px;
-	width: 100%;
-	background: url(../img/bg_splash.jpg) center;
-	background-attachment: fixed;
-}
-
 /*=====================↓↓ section2=====================================*/
 #intro.section {
 	position: relative;
 	height: 928px;
 	width: 100%;
 	background: url(../img/bg_intro.jpg);
-	background-position: center;
+	background-position: center center;
 }
 #intro .container {
 	position: absolute;
