--- a/css/malkeun.css
+++ b/css/malkeun.css
@@ -76,3 +76,33 @@
 .part4 .monitoring > a {
 	background-image: url(../img/btn_next_blue.png);
 }
+
+/* 두뇌 */
+.part4 .brain {
+	position:relative;
+	width:54px; height:40px;
+	overflow:hidden;
+	margin-left:140px;
+}
+.part4 .brain .inner {
+	position:absolute; top:0; left:0;
+	width:54px; height:520px;
+	background:url(../img/brain.png) no-repeat 0 0;
+}
+/* 심장 */
+.part4 .heart {
+	width:170px; height:67px; margin:40px 0 0 135px;
+	position:relative;
+}
+.part4 .beat {
+	position:absolute;
+	width:39px; height:32px; margin: 18px 0 0 16px;
+	background:url(../img/heart.png) no-repeat 0 0;
+	background-size: 100%;
+}
+.part4 .circle {
+	position:absolute;
+	width:70px; height:65px;
+	background:url(../img/heart_circle.png)  no-repeat 0 0;
+}
+/* 그래프 */
