--- a/css/youngin.css
+++ b/css/youngin.css
@@ -4,7 +4,6 @@
     background: url(../img/bg_splash.jpg) 50% 50% no-repeat;
     background-attachment: fixed;
 }
-
 #splash .container {
     width: 960px;
     margin: 0 auto;
@@ -19,3 +18,155 @@
     height: 644px;
     background: url('../img/hand_1 (1).png') no-repeat;
 }
+#splash .text {
+	position: absolute;
+	top: 255px;
+	left: 50%;
+	width: 360px;
+	margin-left: -110px;
+}
+#splash .text h2 {
+	width: 198px;
+	height: 67px;
+	margin-bottom: 20px;
+	background: url('../img/logo_dark.png') no-repeat;
+}
+#splash .text p {
+	font-size: 15px;
+	line-height: 20px;
+	margin-bottom: 20px;
+}
+#splash .text p a.btn_buy {
+	display: inline-block;
+	width: 129px;
+	height: 38px;
+	vertical-align: middle;
+	background: url('../img/btn_buy.png') no-repeat 0 0;
+}
+#splash .text p a.btn_buy:hover {
+	background: url('../img/btn_buy.png') no-repeat 0 -40px;
+}
+#splash .text p a.btn_buy:active {
+	background: url('../img/btn_buy.png') no-repeat 0 -80px;
+}
+#splash .selectBox {
+	border-top: 1px solid #777;
+	padding-top: 20px;
+}
+#splash .selectBox p {
+	font-size: 11px;
+}
+#splash .selectBox button {
+	vertical-align: middle;
+	margin-left: 5px;
+	line-height: 17px;
+	text-indent: 17px;
+	color: #b6b6b6;
+	cursor: pointer;
+}
+#splash .selectBox p button:hover,
+#splash .selectBox p button:focus,  {
+	vertical-align: middle;
+	margin-left: 5px;
+	line-height: 17px;
+	text-indent: 17px;
+	color: #00aad2;
+	cursor: pointer;
+}
+#splash .selectBox button.on {
+	color: #555;
+}
+
+#splash .selectBox button.btn_ios {
+	background: url('../img/ios.png') no-repeat 0 -16px;
+}
+#splash .selectBox button.btn_ios.on {
+	background-position: 0 0;
+}
+#splash .selectBox button.btn_ios:hover,
+#splash .selectBox button.btn_ios:focus {
+	background: url('../img/ios.png') no-repeat 0 -32px;
+}
+
+#splash .selectBox button.btn_android {
+	background: url('../img/android.png') no-repeat 0 -15px;
+}
+#splash .selectBox button.btn_android.on {
+	background: url('../img/android.png') no-repeat 0 1px;
+}
+#splash .selectBox button.btn_android:hover,
+#splash .selectBox button.btn_android:focus {
+	background: url('../img/android.png') no-repeat 0 -31px;
+}
+#splash .navi {
+	position: absolute;
+	bottom: 10px;
+	left: 0;
+	width: 100%;
+	text-align: center;
+}
+#splash .navi {
+	background: url('../img/arrow_down.png') no-repeat 50% 100%;
+}
+#splash .navi button {
+	text-transform: uppercase;
+	cursor: pointer;
+	margin-bottom: 30px;
+	font-size: 15px;
+	font-weight: bold;
+}
+
+
+
+
+#topPlayer {
+
+}
+#topPlayer .topPlayerWrapper {
+	position: relative;
+	width: 960px;
+	margin: 0 auto;
+	background: blue;
+}
+#tinke {
+	position: absolute;
+	top: 253px;
+	left: 150px;
+	background: red;
+	z-index: 900;
+}
+#tinke #tinke_light {
+	position: absolute;
+}
+#tinke #tinke_body {
+	position: relative;
+}
+#tinke #tinke_body > div {
+	position: absolute;
+	width: 162px;
+	height: 208px;
+}
+#tinke #tinke_body .white {
+	background: url('../img/white%20(3).png') no-repeat;
+}
+#tinke #tinke_body .black {
+	background: url('../img/black%20(1).png') no-repeat;
+}
+#tinke #tinke_body .blue {
+	background: url('../img/blue%20(2).png') no-repeat;
+}
+#tinke #tinke_body .pink {
+	background: url('../img/pink%20(3).png') no-repeat;
+}
+#tinke #tinke_body .shadow {
+	width: 195px;
+	height: 241px;
+	background: url('../img/shadow%20(2).png') no-repeat;
+	z-index: -1;
+}
+
+#tinke #tinke_outline {}
+#tinke #tinke_parts {}
+#tinke #tinke_parts .top {}
+#tinke #tinke_parts .bottom {}
+#tinke #tinke_parts .body {}
