--- a/css/default.css
+++ b/css/default.css
@@ -16,7 +16,7 @@ button {background: transparent; border: none;}
 }
 
 .v_h{ visibility:hidden; font-size:1px; height: 0; width: 0;}
-
+.i_r{ position: absolute; top: -1000%; left: -1000%;}
 
 /* ---------------------------------레이아웃--------------------------------- */
 /* 메인 공통 레이아웃 */
@@ -31,9 +31,6 @@ button {background: transparent; border: none;}
 .logos h1 div{ display:none; background:url(../img/btn_fb.png) center 0 no-repeat; height:21px; .cursor:hand; cursor:pointer;}
 .logos h1 div:hover,
 .logos h1 div:focus{ background-position:center -22px;}
-
-/* tinke_blue */
-#topLayer #tinke{position:fixed    ; top:250px; left:340px; width:162px; height:208px;  background:url(../img/blues.png) no-repeat 0 0; z-index:99999999}
 
 /* navi_top */
 .navi_top { position:fixed;width:100%; height:52px; border-top:1px solid #00aad2; background:url(../img/bg_nav_top.png) 0 0 repeat-x; z-index: 900}
